<resources>

    <string name="app_name">FolioReader</string>

    <string name="andada">Andada</string>
    <string name="lato">Lato</string>
    <string name="lora">Lora</string>
    <string name="raleway">Raleway</string>

    <string name="andada_font">fonts/andada/Andada-Regular.otf</string>
    <string name="lato_font">fonts/lato/Lato-Regular.ttf</string>
    <string name="lora_font">fonts/lora/Lora-Regular.ttf</string>
    <string name="raleway_font">fonts/raleway/Raleway-Regular.ttf</string>

    <string name="minutes_left">%1$d daqiqa ·&#160;</string>
    <string name="minute_left">%1$d daqiqa ·&#160;</string>
    <string name="less_than_minute">Bir daqiqadan kam ·&#160;</string>

    <string name="copied">Ko\'chirildi</string>
    <string name="send_to">Jo\'natish</string>

    <string name="copy">Ko\'chirish</string>
    <string name="share">Ulashish</string>
    <string name="define">Define</string>
    <string name="highlight">Highlight</string>

    <string name="pages_left">%1$d sahifa qoldi</string>
    <string name="page_left">%1$d sahifa qoldi</string>
    <string name="highlights">Belgi</string>
    <string name="half_speed">1/2x</string>
    <string name="onex">1x</string>
    <string name="one_and_half">1&#160;1/2x</string>
    <string name="two_x">2x</string>
    <string name="style">Style</string>
    <string name="style_underline"><![CDATA[<u style=\" border-bottom: 1px dashed #bcbcbc;   text-decoration: none;\">Style</u>]]></string>
    <string name="full_path">full-path</string>
    <string name="error_goToPage">goToPage error:</string>
    <string name="zip">.zip</string>
    <string name="htmlBodyTableOpen">&lt;html&gt;&lt;body&gt;&lt;table&gt;</string>
    <string name="titlesMeta">&lt;tr&gt;&lt;td&gt;Titles:&lt;/td&gt;</string>
    <string name="authorsMeta">&lt;tr&gt;&lt;td&gt;Authors:&lt;/td&gt;</string>
    <string name="contributorsMeta">&lt;tr&gt;&lt;td&gt;Contributors:&lt;/td&gt;</string>
    <string name="languageMeta">&lt;tr&gt;&lt;td&gt;Language:&lt;/td&gt;&lt;td&gt;</string>
    <string name="publishersMeta">&lt;tr&gt;&lt;td&gt;Publishers:&lt;/td&gt;</string>
    <string name="typesMeta">&lt;tr&gt;&lt;td&gt;Types:&lt;/td&gt;</string>
    <string name="descriptionsMeta">&lt;tr&gt;&lt;td&gt;Descriptions:&lt;/td&gt;</string>
    <string name="rightsMeta">&lt;tr&gt;&lt;td&gt;Rights:&lt;/td&gt;</string>
    <string name="tablebodyhtmlClose">&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
    <string name="tocReference">&lt;tr&gt;&lt;td&gt;Table of Contents:&lt;/td&gt;</string>
    <string name="change_Font">Change Font</string>
    <string name="change_Font_Color">Font Color:</string>
    <string name="changeStyle">Change Style</string>
    <string name="blue_rgb">#0000ff</string>
    <string name="red_rgb">#ff0000</string>
    <string name="green_rgb">#00ff00</string>
    <string name="black_rgb">#000000</string>
    <string name="white_rgb">#ffffff</string>
    <string name="error_CannotChangeStyle">Cannot Change Style!</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="SetSizeTitle">Upper Panel Size:</string>
    <string name="LanguageChooserTitle">Choose two languages:</string>
    <string name="parallelTextBool">parallelTextBool</string>
    <string name="loading">Yuklanmoqda</string>
    <string name="please_wait">please wait...</string>
    <string name="one_and_half_speed"><![CDATA[1<sup>1</sup>/<sub>2</sub>x]]></string>
    <string name="half_speed_text"><![CDATA[<sup>1</sup>/<sub>2</sub>x]]></string>
    <string name="please_wait_till_audio_is_parsed">please wait till audio is been parsed, Retry after some time</string>
    <string name="audio_mark_id">javascript:alert(audioMarkID(\'epub-media-overlay-playing\',\'%s\'))</string>
    <string name="setmediaoverlaystyle">javascript:setMediaOverlayStyle(\'%s\')</string>
    <string name="go_to_anchor" translatable="false">javascript:goToAnchor(\'%s\')</string>
    <string name="go_to_highlight" translatable="false">javascript:goToHighlight(\'%s\')</string>
    <string name="sethighlightstyle">javascript:setHighlightStyle(\'%s\');</string>
    <string name="css_tag"><![CDATA[<link rel=\"stylesheet\" type=\"text/css\" href=\"%s\" />]]></string>
    <string name="script_tag"><![CDATA[<script type=\"text/javascript\" src=\"%s\"></script>]]></string>
    <string name="td_tag"><![CDATA[<td>%s</td></tr>]]></string>
    <string name="tr_tag"><![CDATA[<tr><td></td><td>%s</td></tr>]]></string>
    <string name="script_tag_method_call"><![CDATA[<script type=\"text/javascript\">%s</script>]]></string>
    <string name="underline_highlights">
        <span style="border-bottom: 1px solid #ff0000;">%s</span>
    </string>
    <string name="edit_notes">Eslatma saqlash</string>
    <string name="save_note">Saqlash</string>
    <string name="please_enter_note">Iltimos, eslatma kiriting</string>
    <string name="contents">Mundarija</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="debug_start_drag">Starting drag!</string>
    <string name="debug_start_unable_drag">Starting unable to drag!</string>
    <string name="dictionary">Dictionary</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="cannot_access_epub_message">Kitobni ochish uchun xotiradan foydalanishga ruxsat kerak</string>
    <string name="direction_horizontal">Gorizontal</string>
    <string name="direction_vertical">Vertikal</string>

    <string name="xhtml_mime_type" translatable="false">application/xhtml+xml</string>
    <string name="html_mime_type" translatable="false">text/html</string>

    <string name="menu_item_search">Qidiruv</string>
    <string name="menu_item_contents">Mundarija</string>
    <string name="menu_item_config">Konfiguratsiya</string>
    <string name="menu_item_tts">Text To Speech</string>

    <string name="search_hint">Kitob bo\'ylab qidiruv</string>
    <string name="search_empty_text">Natija topilmadi</string>
    <string name="search_failure_text">Xatolik yuz berdi</string>

    <plurals name="numberOfSearchResults">
        <item quantity="one">%d ta natija</item>
        <item quantity="other">%d ta natija</item>
    </plurals>

    <!-- JS Calls -->
    <string name="callComputeLastReadCfi" translatable="false">javascript:computeLastReadCfi()</string>
    <string name="callScrollToCfi" translatable="false">javascript:scrollToCfi(\"%s\")</string>
    <string name="callHighlightSearchLocator" translatable="false">javascript:highlightSearchLocator(\"%s\")</string>
    <string name="callClearSelection" translatable="false">javascript:clearSelection()</string>
    <string name="delete">Belgini o\'chirish</string>
    <string name="view_bottom_sheet_text_brightness">Yorug\'lik</string>
    <string name="view_bottom_sheet_text_background_color">Fon rangi</string>
    <string name="view_bottom_sheet_aa">Aa</string>
    <string name="view_bottom_sheet_text_type">Yozuv turi</string>
    <string name="view_bottom_sheet_brightness_image">view_bottom_sheet_brightness_image</string>
    <string name="view_bottom_sheet_brightness_fill_image">view_bottom_sheet_brightness_fill_image</string>
    <string name="view_bottom_sheet_text_size">Yozuv kattaligi</string>
    <string name="view_bottom_sheet_text_minus">A-</string>
    <string name="view_bottom_sheet_text_add">A+</string>
    <string name="view_bottom_sheet_text_orientation">O\'qish yo\'nalishi</string>
    <string name="bookmarks">Xatchop</string>
    <string name="bookmark_name">Xatchop nomi</string>
    <string name="save_bookmark">Saqlash</string>
    <string name="book_mark_success">Xatchop saqlandi</string>

</resources>
