<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bottom_sheet_view"
    android:elevation="16dp"
    android:orientation="vertical"
    android:padding="24dp"
    app:layout_anchorGravity="bottom"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/text_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_bottom_sheet_text_brightness"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/view_bottom_sheet_brightness_image"
            android:src="@drawable/ic_brightness_high"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/size_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/seek_bar"
            android:thumb="@drawable/thumb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/brightness_fill"
            app:layout_constraintStart_toEndOf="@+id/brightness"
            app:layout_constraintTop_toTopOf="parent"
            tools:progress="30" />

        <ImageView
            android:id="@+id/brightness_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/view_bottom_sheet_brightness_fill_image"
            android:src="@drawable/ic_brightness_full"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/view_bottom_sheet_text_background_color"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/backgrounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_background">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/day_background_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item_selected"
            app:strokeWidth="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="29dp"
                android:paddingVertical="12dp"
                android:text="@string/view_bottom_sheet_aa"
                android:textColor="@color/view_bottom_sheet_card_text"
                android:textSize="14sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/night_background_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item"
            app:strokeWidth="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="29dp"
                android:paddingVertical="12dp"
                android:text="@string/view_bottom_sheet_aa"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/view_bottom_sheet_text_type"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/fonts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_font_andada"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item_selected"
            app:strokeWidth="1dp">

            <com.folioreader.util.StyleableTextView
                android:id="@+id/font_andada"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/andada"
                android:textSize="12sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_font_lato"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item"
            app:strokeWidth="1dp">

            <com.folioreader.ui.view.StyleableTextView
                android:id="@+id/font_lato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/lato"
                android:textSize="12sp"
                app:folio_font="@string/lato_font" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_font_lora"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item"
            app:strokeWidth="1dp">

            <com.folioreader.ui.view.StyleableTextView
                android:id="@+id/font_lora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/lora"
                android:textSize="12sp"
                app:folio_font="@string/lora_font" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_font_raleway"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item"
            app:strokeWidth="1dp">

            <com.folioreader.ui.view.StyleableTextView
                android:id="@+id/font_raleway"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/raleway"
                android:textSize="12sp"
                app:folio_font="@string/raleway_font" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <TextView
        android:id="@+id/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/view_bottom_sheet_text_size"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/layout_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_size">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_text_size_minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/view_bottom_sheet_item_grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/text_size_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/view_bottom_sheet_text_minus"
                android:textSize="12sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_text_size_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/view_bottom_sheet_item_grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/text_size_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/view_bottom_sheet_text_add"
                android:textSize="12sp" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <TextView
        android:id="@+id/text_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/view_bottom_sheet_text_orientation"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_size">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_orientation_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/view_bottom_sheet_item_grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/orientation_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/direction_vertical"
                android:textSize="12sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_orientation_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/view_bottom_sheet_item_grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/view_bottom_sheet_item"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/orientation_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/direction_horizontal"
                android:textSize="12sp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_size">

        <SeekBar
            android:id="@+id/page_size_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-16dp"
            android:layout_weight="1"
            android:progress="50"
            android:progressDrawable="@drawable/seek_bar"
            android:thumb="@drawable/thumb" />

        <TextView
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="end"
            android:textSize="12sp"
            tools:text="32/532" />
    </LinearLayout>

</LinearLayout>